--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,3 +31,28 @@ body {
 /* =================== Start Style Sheet ==========================
 ================================================================ */
 
+.main-container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+}
+/* set outlines for all divs */
+div {
+    outline: solid red thin;
+}
+
+.header {
+    align-self: flex-end;
+    padding: 2em;
+}
+
+.main {
+    /* flex: 1; */
+}
+
+.nav {
+    padding: 2em;
+    margin-top: auto;
+}
+
