--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,28 +31,146 @@ body {
 /* =================== Start Style Sheet ==========================
 ================================================================ */
 
+body {
+    background-color: #000000;
+    color: #ffffff;
+}
+
 .main-container {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 5em 1fr 1fr;
     height: 100vh;
     width: 100vw;
 }
-/* set outlines for all divs */
-div {
-    outline: solid red thin;
-}
 
 .header {
-    align-self: flex-end;
-    padding: 2em;
+    /* outline: solid red thin; */
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+    z-index: 10;
+    align-self: end;
+    font-size: 3em;
+    text-align: center;
+    padding-right: 1em;
+    animation: fadeIn 2s ease-in 6s forwards;
+    opacity: 0;
+}
+
+.header p:last-child {
+    margin-bottom: 0;
 }
 
 .main {
-    /* flex: 1; */
+    /* outline: solid blue thin; */
+    grid-column: 1 / 3;
+    grid-row: 2 / 4;
 }
 
 .nav {
+    /* outline: solid green thin; */
+    grid-column: 1 / 3;
+    grid-row: 4 / 5;
+    align-self: end;
     padding: 2em;
-    margin-top: auto;
 }
 
+/* Logo Animation */
+
+#m {
+    stroke-dasharray: 1390;
+    stroke-dashoffset: 1390;
+    animation: m-dash 6s linear 1s forwards;
+}
+
+@keyframes m-dash {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+#sun {
+    stroke-dasharray: 337;
+    stroke-dashoffset: 337;
+    animation: sun-dash 5s linear 2s forwards;
+}
+
+@keyframes sun-dash {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+#riverL {
+    stroke-dasharray: 176;
+    stroke-dashoffset: 176;
+    animation: l-dash 4s linear 3s forwards;
+}
+
+@keyframes l-dash {
+  from {
+    stroke-dashoffset: 176;
+  }
+  to {
+    stroke-dashoffset: 352;
+  }
+}
+
+#riverR {
+    stroke-dasharray: 114;
+    stroke-dashoffset: 114;
+    animation: r-dash 4s linear 3s forwards;
+}
+
+@keyframes r-dash {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+#flowL {
+    stroke-dasharray: 52;
+    stroke-dashoffset: 52;
+    animation: flowL-dash 3.4s linear 3.8s forwards;
+}
+
+@keyframes flowL-dash {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+#flowM {
+    stroke-dasharray: 65;
+    stroke-dashoffset: 65;
+    animation: flowM-dash 3.4s linear 3.8s forwards;
+}
+
+@keyframes flowM-dash {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+#flowR {
+    stroke-dasharray: 42;
+    stroke-dashoffset: 42;
+    animation: flowR-dash 2s linear 5s forwards;
+}
+
+@keyframes flowR-dash {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+/* Text Fade-in */
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
