--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,7 @@ body {
 
 .header {
     /* outline: solid red thin; */
+    font-family: 'Lato', sans-serif;
     grid-column: 2 / 3;
     grid-row: 1 / 3;
     z-index: 10;
@@ -53,12 +54,21 @@ body {
     font-size: 3em;
     text-align: center;
     padding-right: 1em;
-    animation: fadeIn 2s ease-in 6s forwards;
-    opacity: 0;
+    /* animation: fadeIn 2s ease-in 6s forwards; */
+    /* opacity: 0; */
+}
+
+.header p {
+    margin-bottom: .5em;
+    background: -webkit-linear-gradient(#eeeeee, rgb(158, 104, 246));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .header p:last-child {
     margin-bottom: 0;
+    font-size: .5em;
 }
 
 .main {
@@ -77,7 +87,7 @@ body {
 
 /* Logo Animation */
 
-#m {
+/* #m {
     stroke-dasharray: 1390;
     stroke-dashoffset: 1390;
     animation: m-dash 6s linear 1s forwards;
@@ -166,11 +176,14 @@ body {
 
 /* Text Fade-in */
 
-@keyframes fadeIn {
+/* @keyframes fadeIn {
     from {
         opacity: 0;
     }
     to {
         opacity: 1;
     }
-}
+} */
+
+/* Button animations */
+ */
