--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,8 +54,8 @@ body {
     font-size: 3em;
     text-align: center;
     padding-right: 1em;
-    /* animation: fadeIn 2s ease-in 6s forwards; */
-    /* opacity: 0; */
+    animation: fadeIn 2s ease-in 6s forwards;
+    opacity: 0;
 }
 
 .header p {
@@ -87,7 +87,7 @@ body {
 
 /* Logo Animation */
 
-/* #m {
+#m {
     stroke-dasharray: 1390;
     stroke-dashoffset: 1390;
     animation: m-dash 6s linear 1s forwards;
@@ -176,14 +176,14 @@ body {
 
 /* Text Fade-in */
 
-/* @keyframes fadeIn {
+@keyframes fadeIn {
     from {
         opacity: 0;
     }
     to {
         opacity: 1;
     }
-} */
+}
 
 /* Button animations */
- */
+ 
