--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,12 +54,14 @@ body {
     font-size: 3em;
     text-align: center;
     padding-right: 1em;
-    animation: fadeIn 2s ease-in 6s forwards;
-    opacity: 0;
 }
 
 .header p {
     margin-bottom: .5em;
+}
+
+.header p,
+.nav li {
     background: -webkit-linear-gradient(#eeeeee, rgb(158, 104, 246));
     background-clip: text;
     -webkit-background-clip: text;
@@ -79,10 +81,26 @@ body {
 
 .nav {
     /* outline: solid green thin; */
-    grid-column: 1 / 3;
+    grid-column: 1 / 2;
     grid-row: 4 / 5;
     align-self: end;
+    justify-self: end;
     padding: 2em;
+}
+
+.nav ul {
+				display: flex;
+				flex-direction: row;
+				list-style-type: none;
+}
+
+li {
+				margin-left: 2em;
+}
+
+a {
+				color: inherit;
+				text-decoration: none;
 }
 
 /* Logo Animation */
@@ -176,6 +194,11 @@ body {
 
 /* Text Fade-in */
 
+.header {
+					animation: fadeIn 2s ease-in 6s forwards;
+    opacity: 0;
+}
+
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -186,4 +209,56 @@ body {
 }
 
 /* Button animations */
- 
+
+.nav li:nth-child(1) {
+					position: relative;
+					left: -1000px;
+					animation: navFadeIn 2s ease-in 11s forwards;
+}
+
+.nav li:nth-child(2) {
+					position: relative;
+					left: -1000px;
+					animation: navFadeIn 2s ease-in 10s forwards;
+}
+
+.nav li:nth-child(3) {
+					position: relative;
+					left: -1000px;
+					animation: navFadeIn 2s ease-in 9s forwards;
+}
+
+.nav li:nth-child(4) {
+					position: relative;
+					left: -1000px;
+					animation: navFadeIn 2s ease-in 8s forwards;
+}
+
+.nav li:nth-child(5) {
+					position: relative;
+					left: -1000px;
+					animation: navFadeIn 2s ease-in 7s forwards;
+}
+
+@keyframes navFadeIn {
+					85% {
+													left:0;
+													}
+					89% {
+													left: -5px;;
+													}
+					93% {
+													left: 0;
+													}
+					97% {
+													left: -3px;
+													}
+					100% {
+													left:0;
+													}
+}
+
+/*.nav li {
+					animation: buttonSlide 1s ease-in 7s forwards 
+}*/
+
