--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -48,30 +48,36 @@ a {
   	grid-template-columns: 1fr 1fr;
   	grid-template-rows: 80% 1fr;
   	height: 100vh;
-  	width: 100vw;
+	width: 100vw;
 }
 
 .folio-main {
   	outline: blue solid thin;
   	grid-column: 1 / 3;
 	grid-row: 1 / 2;
-	place-self: center;
-}
-
-/* .gallery {
 	display: flex;
 	justify-content: center;
-	align-content: center;
-} */
+	align-items: center;
+	min-height: 0;
+	min-width: 0;
+}
+
+.gallery-container {
+	outline: pink solid thin;
+	max-width: 970px;
+	min-height: 0;
+	min-width: 0;
+	position: relative;
+}
 
 /* .slideshow {
 	display: none;
 } */
 
-/* .slideshow img.responsive {
-	width: 100%;
+.slideshow img.responsive {	
+	max-width: 970px;
 	height: auto;
-} */
+}
 
 /* .caption {
 
