--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -56,6 +56,7 @@ a {
   	grid-column: 1 / 3;
 	grid-row: 1 / 2;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	min-height: 0;
@@ -64,24 +65,100 @@ a {
 
 .gallery-container {
 	outline: pink solid thin;
-	max-width: 970px;
+	max-height: 80%;
 	min-height: 0;
 	min-width: 0;
-	position: relative;
+	overflow: hidden;
 }
 
-/* .slideshow {
+.slideshow {
 	display: none;
-} */
+}
 
-.slideshow img.responsive {	
-	max-width: 970px;
+img.responsive {
+	max-width: 100%;
 	height: auto;
 }
 
-/* .caption {
+.caption {
+z-index: 10;
+position: absolute;
+top: 15%;
+left: 50%;
+}
 
-} */
+/* Next & previous buttons */
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.caption {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
 
 /* Nav Section */
 
